# image-service

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
api/: Cargo.toml
api/openapi/: nydus-rs.yaml
api/src/: http.rs  http_endpoint.rs  lib.rs
builder/: Cargo.toml
builder/src/: builder.rs  lib.rs  node.rs  tree.rs
contrib/nydus-dedup/: .gitignore  README.md
contrib/nydus-dedup/nydus-dump/: nydus-dump.sh
contrib/nydus-dedup/nydus-dump/conf/: example.conf
contrib/nydus-dedup/nydus-dump/etc/: registry.json
contrib/nydus-dedup/nydus-stat/: CMakeLists.txt
contrib/nydus-dedup/nydus-stat/src/: nydus-stat.cpp  nydus-stat.h
contrib/nydus-dedup/ociv1-dump/: ociv1-dump.sh
contrib/nydus-dedup/ociv1-dump/conf/: example.conf  list_example.txt
contrib/nydus-overlayfs/: go.mod  go.sum
contrib/nydus-overlayfs/cmd/: main.go
contrib/nydus-snapshotter/: Makefile  go.mod  go.sum
contrib/nydus-snapshotter/pkg/daemon/: config.go
contrib/nydus-snapshotter/pkg/filesystem/nydus/: config.go
contrib/nydus-snapshotter/pkg/filesystem/stargz/: config.go
contrib/nydus-snapshotter/pkg/store/: store.go
contrib/nydusify/: Makefile  README.md  go.mod
contrib/nydusify/converter/: converter.go
contrib/nydusify/nydus/: build_flow.go
contrib/nydusify/registry/: layer.go  layer_job.go  registry.go
contrib/nydusify/tests/: e2e_test.go  nydusify.go
contrib/nydusify/utils/: archive.go  worker.go
crfs/: Cargo.toml
crfs/src/: lib.rs  rafs.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: containerd-env-setup.md  image-builder.md  nydusd.md  tutorial.md
error/: Cargo.toml
error/src/: lib.rs  logger.rs  rafs.rs
fuse/: Cargo.toml
fuse/src/: filesystem.rs  lib.rs  protocol.rs  server.rs
image_builder/: Cargo.toml
image_builder/src/: builder.rs  lib.rs  node.rs  oss.rs
misc/example/: Dockerfile  README.md  container-config.yaml  containerd-config.toml  containerd-entrypoint.sh  run.sh
misc/musl-static/: Dockerfile
misc/nydus-smoke/: Dockerfile
misc/nydusify-smoke/: Dockerfile  entrypoint.sh
misc/smoke/: Dockerfile
rafs/: Cargo.toml  build.rs
rafs/src/: dag.rs  fs.rs  io_stats.rs  layout.rs  lib.rs
rafs/src/metadata/: cached.rs  cached_v5.rs  digest.rs  direct.rs  direct_map.rs  layout.rs  mod.rs  noop.rs
rafs/src/storage/: backend.rs  bio.rs  compress.rs  device.rs  dummy_backend.rs  factory.rs  mod.rs  oss_backend.rs  utils.rs
rafs/src/storage/backend/: dummy.rs  error.rs  localfs.rs  mod.rs  oss.rs  registry.rs  request.rs
rafs/src/storage/cache/: blobcache.rs  dummycache.rs  mod.rs
rafs/src/storage/compress/: lz4_ipp.rs  lz4_standard.rs  mod.rs
storage/: Cargo.toml  build.rs
storage/src/: device.rs  lib.rs
storage/src/cache/: blobcache.rs
storage/src/cache/chunkmap/: mod.rs
storage/src/compress/: mod.rs
tests/: builder.rs  nydusd.rs  smoke.rs  snapshotter.rs
tests/texture/: lower  overlay
upgrade/: Cargo.toml
upgrade/src/: lib.rs  resource.rs
upgrade/src/backend/: mod.rs  shared_memory.rs  unix_domain_socket.rs
upgrade/src/binary_resource/: mod.rs
upgrade/src/binary_resource/backend/: mod.rs  shared_memory.rs
upgrade/src/fd_resource/: mod.rs
utils/: Cargo.toml
utils/src/: compress.rs  digest.rs  error.rs  exec.rs  fuse.rs  lib.rs  metrics.rs
vfs/: Cargo.toml
vfs/src/: lib.rs  pseudo_fs.rs  vfs.rs
vhost_rs/: Cargo.toml  README.md
vhost_rs/src/: descriptor_utils.rs  file_traits.rs  lib.rs  queue.rs  vring.rs
vhost_rs/src/vhost_user/: message.rs  slave_req_handler.rs
vhost_user_backend/: Cargo.toml
vhost_user_backend/devices/: Cargo.toml
vhost_user_backend/pci/: Cargo.toml
vhost_user_backend/vm-allocator/: Cargo.toml
vhost_user_backend/vm-device/: Cargo.toml
vhost_user_backend/vm-virtio/: Cargo.toml
vhost_user_backend/vm-virtio/src/: lib.rs
