[package]
name = "nydus-rs"
version = "1.6.0"
authors = ["The Nydus Developers"]
edition = "2018"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlimit = "0.3.0"
log = "0.4.8"
epoll = ">=4.0.1"
libc = "0.2"
vmm-sys-util = "0.8"
clap = "2.33"
flexi_logger = { version = "0.17" }
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = "1.0.51"
serde_with = { version = "1.6.0", features = ["macros"] }
sha2 = "0.9.1"
lazy_static = "1.4.0"
xattr = "0.2.2"
nix = "0.17"
anyhow = "1.0.35"
base64 = { version = ">=0.12.0" }
rust-fsm = "0.4.0"
vm-memory = { version = ">=0.2.0", optional = true }
chrono = "0.4.19"
storage = { path = "storage" }
openssl = { version = "0.10.35", features = ["vendored"] }

event-manager = "0.2"
fuse-backend-rs = { git = "https://github.com/cloud-hypervisor/fuse-backend-rs.git", optional = true }
vhost-rs = { git = "https://github.com/cloud-hypervisor/vhost.git", branch = "dragonball", package = "vhost", optional = true }
vhost-user-backend = { git = "https://github.com/cloud-hypervisor/vhost-user-backend.git", package = "vhost_user_backend", optional = true }
snapshot = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/snapshot.git", branch = "master" }
versionize = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize.git", branch = "master" }
versionize_derive = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize_derive.git", branch = "master" }

nydus-api = { path = "api" }
nydus-app = "0.1"
nydus-error = "0.1"
nydus-utils = { path = "utils" }
rafs = { path = "rafs", features = ["backend-registry", "backend-oss"] }
upgrade-manager = { path = "upgrade" }

[dev-dependencies]
sendfd = "0.3.3"
env_logger = "0.8.2"

[features]
fusedev = ["nydus-utils/fusedev", "fuse-backend-rs/fusedev", "rafs/lz4_ipp"]
virtiofs = [
    "fuse-backend-rs/vhost-user-fs",
    "vm-memory/backend-mmap",
    "vhost-rs/vhost-user-slave",
    "vhost-user-backend",
    "rafs/lz4_ipp",
]

[workspace]
members = ["api", "app", "error", "rafs", "storage", "utils"]

[patch.crates-io]
event-manager = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/event-manager.git", branch = "master" }
vm-memory = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/vm-memory.git", branch = "master", optional = true }

[patch.'https://github.com/cloud-hypervisor/fuse-backend-rs.git']
fuse-backend-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-backend-rs.git", branch = "stable-0.3.0", optional = true }

[patch.'https://github.com/cloud-hypervisor/vhost-user-backend.git']
vhost-user-backend = { git = "ssh://git@gitlab.alibaba-inc.com/kata-containers/vhost-user-backend.git", package = "vhost_user_backend", branch = "master", optional = true }

[patch."https://github.com/cloud-hypervisor/vhost.git"]
vhost-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/vhost.git", branch = "master", package = "vhost", optional = true }
