[package]
name = "fuse"
version = "0.1.0"
authors = ["Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libc = "0.2"
bitflags = "1.2"
vm-memory = {git = "https://github.com/rust-vmm/vm-memory", branch = "master", features = ["backend-mmap"]}
vhost_rs  = { path = "../vhost_rs" }
