[package]
name = "image_builder"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
log = "0.4"
env_logger = "0.7.1"
rust-crypto = "0.2.36"
compress = "0.1.2"
lz4 = "1.23.1"

[dependencies.rafs]
path = "../rafs"
