[package]
name = "rafs"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "0.4.6"
base64 = "0.11.0"
config = "0.10"
compress = "0.1.2"
httpdate = "0.3.2"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
lz4 = "1.23.1"
lz4-sys = "1.9.2"
madvise = "0.1.0"
nix = "0.17.0"
reqwest = { version = "0.10.4", features = [ "blocking" ] }
rust-crypto = "0.2.36"
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
url = "2.1.1"

fuse-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-backend-rs.git", branch = "nydus" }
vm-memory = ">=0.2.0"

[features]
fusedev = ["fuse-rs/fusedev"]
virtio-fs = ["fuse-rs/virtiofs"]
vhost-user-fs = ["fuse-rs/vhost-user-fs"]
