[package]
name = "rafs"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "0.4.6"
base64 = { version = "0.11.0", optional = true }
httpdate = { version = "0.3.2", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
spmc = "0.3.0"
lz4-sys = "1.9.2"
nix = "0.17.0"
blake3 = "0.3.5"
reqwest = { version = "0.10.4", features = [ "blocking" ], optional = true }
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
sha2 = { version = "0.9.1", optional = true }
sha-1 = { version = "0.9.1", optional = true }
hmac = { version = "0.8.1", optional = true }
url = { version = "2.1.1", optional = true }

fuse-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-backend-rs.git", branch = "nydus" }
vm-memory = ">=0.2.0"

nydus-utils = { path = "../utils" }

[features]
fusedev = ["fuse-rs/fusedev"]
virtio-fs = ["fuse-rs/virtiofs"]
vhost-user-fs = ["fuse-rs/vhost-user-fs"]
backend-localfs = ["sha2"]
backend-oss = ["base64", "httpdate", "reqwest", "sha-1", "sha2", "hmac", "url"]
backend-registry = ["reqwest", "sha2", "url"]
