[package]
name = "rafs"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "0.4.6"
base64 = { version = ">=0.12.0", optional = true }
bitflags = ">=1.1.0"
httpdate = { version = "0.3.2", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.8"
spmc = "0.3.0"
lz4-sys = "1.9.2"
nix = "0.17.0"
blake3 = "0.3.6"
flate2 = { version = "1.0", features = ["miniz-sys"], default-features = false }
reqwest = { version = "0.10.4", features = ["blocking", "json"], optional = true }
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
sha2 = { version = "0.9.1", optional = true }
sha-1 = { version = "0.9.1", optional = true }
hmac = { version = "0.8.1", optional = true }
url = { version = "2.1.1", optional = true }
vm-memory = ">=0.2.0"
nydus-utils = { path = "../utils" }

fuse-rs = { git = "https://github.com/cloud-hypervisor/fuse-backend-rs.git" }
snapshot = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/snapshot.git", branch = "master" }
versionize = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize.git", branch = "master" }
versionize_derive = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize_derive.git", branch = "master" }

[dev-dependencies]
vmm-sys-util = ">=0.3.1"

[features]
fusedev = ["fuse-rs/fusedev"]
virtio-fs = ["fuse-rs/virtiofs"]
vhost-user-fs = ["fuse-rs/vhost-user-fs"]
backend-localfs = ["sha2"]
backend-oss = ["base64", "httpdate", "reqwest", "sha-1", "sha2", "hmac", "url"]
backend-registry = ["reqwest", "sha2", "url"]
lz4_ipp = []
