[package]
name = "upgrade-manager"
version = "0.1.0"
authors = ["The Nydus Developers"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2"
nix = "0.17"
log = "0.4"
sendfd = "0.3.3"
snapshot = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/snapshot.git", branch = "master" }
versionize = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize.git", branch = "master" }
versionize_derive = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/versionize_derive.git", branch = "master" }
fuse-backend-rs = { git = "https://github.com/cloud-hypervisor/fuse-backend-rs.git" }

[dev-dependencies]
vmm-sys-util = ">=0.8.0"
