[package]
name = "utils"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4 = "1.23.1"
log = "0.4"
libc = "0.2"
nix = "0.17"
fuse-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-rs.git", features = ["fusedev"], optional = true }

[features]
fusedev = ["fuse-rs"]
