[package]
name = "nydus-utils"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libc = "0.2"
nix = "0.17"
backtrace = "0.3"
fuse-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-backend-rs.git", branch = "nydus", optional = true }

[features]
fusedev = ["fuse-rs/fusedev"]
