[package]
name = "vfs"
version = "0.1.0"
authors = ["The Ant Financial Nydus Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = ">=0.4.6"
bimap = ">=0.4"
libc = ">=0.2"
log = ">=0.4"

fuse-rs = { git = "ssh://git@gitlab.alibaba-inc.com/rust-vmm/fuse-rs.git", branch = "bergwolf/transport" }

[features]
fusedev = ["fuse-rs/fusedev"]
virtio-fs = ["fuse-rs/virtiofs"]
vhost-user-fs = ["fuse-rs/vhost-user-fs"]
