[package]
name = "vhost_rs"
version = "0.1.0"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
license = "Apache-2.0 or BSD-3-Clause"
edition = "2018"

[features]
default = []
vhost-user-master = []
vhost-user-slave = []

[dependencies]
log = "0.4"
bitflags = "1.1.0"
libc = "0.2.60"
vmm-sys-util = ">=0.3.1"

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"

[dev-dependencies]
tempfile = "3.1.0"
